tests/good/10_logical.src
# Test: Logical operators
# Expected: 1
void main([string] args) {
    print_bool(true || false && true);
}
